Minor fix for display on mobile devices

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ header, nav li {
 }
 
 header {
+	overflow: hidden;
 	position: relative;
 	z-index: 20;
 	padding-top: 55px;
